syntax = "proto3";

package fuel_data_edge.filters;

message BlocksFilterProto {
  optional uint32 from = 1;
  optional uint32 to = 2;
  optional string producer = 3;
  optional uint64 take = 4;
  optional uint32 chunk_size = 5;
}