syntax = "proto3";

package fuel_data_grpc_edge.streams;

import "fuel-data-edge/filters.proto";
import "fuel-data-types/block.proto";

service BlocksStream {
  rpc Get(BlocksStreamRequest)
      returns (stream fuel_data_types.block.BlockProto);
}

message BlocksStreamRequest {
  fuel_data_edge.filters.BlocksFilterProto filter = 2;
}
